<resources>
    <string name="app_name">FitTrackMobile</string>
    <string name="login_button_text">Login</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="register_text">Register</string>
    <string name="not_an_account_text">Not an account?</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="already_an_account_text">Already an account?</string>
    <string name="login_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="title_home">Home</string>
    <string name="title_tools">Tools</string>
    <string name="title_user_page">Profile</string>
    <string name="last_workouts_text">Last Workouts</string>
    <string name="measurements_height">Height(cm)</string>
    <string name="measurements_weight">Weight</string>
    <string name="measurements_age">Age</string>
    <string name="measurements_genre">Genre</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="height_edit_hint">Height(cm)</string>
    <string name="weight_edit_hint">Weight</string>
    <string name="age_edit_hint">Age</string>
    <string name="genre_edit_hint">Genre</string>
    <string name="done_edit_button_text">Done</string>
    <string name="surname_input_hint">Surname</string>
    <string name="name_input_hint">Name</string>
    <string name="name_hint_text">Name</string>
    <string name="name_view_text">Name</string>
    <string name="add_routine_button_text">Add Routine</string>
    <string name="title_user_page_edit_view">Profile Edit</string>
    <string name="add_exercise_button_text">Add Exercise</string>
    <string name="new_routine_hint">New Routine</string>
    <string name="save_routine_button_text">Save Routine</string>
    <string name="routine_initial_title">New Routine</string>
    <string name="logout_button_text">Logout</string>
    <string name="edit_button_content_description">Edit button</string>
    <string name="create_exercise_button_text">Create Exercise</string>
    <string name="exercise_description_label_text">Description</string>
    <string name="exercise_type_hint">Type</string>
    <string name="muscle_input_hint">Enter a muscle</string>
    <string name="add_muscle_button_text">Add</string>
    <string name="exercise_title_hint">Exercise Title</string>
    <string name="description_hint">Description…</string>
    <string name="delete_routine_button_text">Delete Routine</string>
    <string name="weight_rm_hint">Weight</string>
    <string name="reps_rm_hint">Reps</string>
    <string name="calculate_button_text">Calculate</string>
    <string name="rm_calculator_label">1RM CALCULATOR</string>
    <string name="units_hint">Units</string>
    <string name="calories_calculator_button_text">CALORIES CALCULATOR</string>
    <string name="weight_calories_hint">Weight(kg)</string>
    <string name="height_calories_hint">Height(cm)</string>
    <string name="activity_factor_hint">Activity Factor</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>
    <string name="basal_calories_text"><![CDATA[Basal Calories ->]]></string>
    <string name="maintenance_calories_text"><![CDATA[Maintenance Calories ->]]></string>
    <string name="weight_wc_hint">Weight(kg)</string>
    <string name="water_register_text">Water Register</string>
    <string name="water_calculator_text">Water Calculator</string>
    <string name="glasses_taken_today_text">Glasses taken today (250ml)</string>
    <string name="water_glass_image_cd">Water Glass Image</string>
    <string name="logo_from_fittrack_cd">Logo from FitTrack</string>

    <string-array name="weight_units">
        <item>Kg</item>
        <item>Lb</item>
    </string-array>
</resources>