<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="50dp"
    tools:context=".ui.ExerciseActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_title_hint"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_description_label_text"
        app:layout_constraintStart_toStartOf="@id/description_text_field"
        app:layout_constraintBottom_toTopOf="@id/description_text_field" />

    <EditText
        android:id="@+id/description_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_textarea"
        android:layout_marginTop="40dp"
        android:lines="5"
        android:hint="@string/description_hint"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/title_value"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/description_text_field"
        app:layout_constraintStart_toStartOf="@id/description_text_field"
        android:textAppearance="?android:textAppearanceMedium"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/type_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/exercise_type_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/muscle_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/type_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/muscleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/muscle_input_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_muscle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/muscle_input"
        app:layout_constraintTop_toTopOf="@id/muscle_input"
        android:text="@string/add_muscle_button_text"
        android:layout_marginHorizontal="20dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/muscle_input"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_exercise_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/routine_card"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="15dp"
        android:text="@string/create_exercise_button_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        />

</androidx.constraintlayout.widget.ConstraintLayout>