<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.RMCalculatorActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/weight_calories_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/height"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/height_calories_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gender"
        android:hint="@string/age_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintStart_toEndOf="@id/age"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/gender_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_hint"
            android:labelFor="@id/type_input_value"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_factor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?android:textAppearanceMedium"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/activity_factor_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_factor_hint"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="60dp"
        android:textSize="17sp"
        android:text="@string/calculate_button_text"
        app:layout_constraintTop_toBottomOf="@id/activity_factor_input"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" >



    <TextView
        android:id="@+id/basal_calories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/basal_calories_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/maintenance_calories_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/maintenance_calories_text"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basal_calories_text"
        />

    <TextView
        android:id="@+id/basal_calories_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/basal_calories_text"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/maintenance_calories_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/maintenance_calories_text"
        app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>