<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.RMCalculatorActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_rm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/weight_rm_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_rm_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reps_rm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toBottomOf="@id/weight_rm"
        android:hint="@string/reps_rm_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reps_rm_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintTop_toBottomOf="@id/reps_rm"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?android:textAppearanceMedium"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/unit_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/units_hint"
            android:labelFor="@id/type_input_value"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="60dp"
        android:textSize="17sp"
        android:text="@string/calculate_button_text"
        app:layout_constraintTop_toBottomOf="@id/unit_input"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="80sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>